Начинаю писать обработку курьеров, рефакторинг
