# courier_service/src/delivery/schemas.py
@@ -4,26 +4,7 @@ from datetime import datetime, time
 from typing import Optional
 
 from pydantic import BaseModel, Field
-from src.users.schemas import BaseAddressPyd, BaseUserDataPyd, ResponseUserPyd
-
-
-class CreateRestaurantPyd(BaseAddressPyd):
-    """Pydantic модель для создания ресторана.
-
-    Fields:
-        - name: str
-        - opening_time: time
-        - closing_time: time
-        - duration_delivery: int
-        - city: Optional[str]
-        - street: str
-        - house_number: str
-    """
-
-    name: str = Field(description='Название ресторана')
-    opening_time: time = Field(description='Время открытия ресторана')
-    closing_time: time = Field(description='Время закрытия ресторана')
-    duration_delivery: int = Field(description='Примерное время доставки заказа/в минутах')
+from src.users.schemas import BaseAddressPyd, BaseUserDataPyd, UserInfoPyd
 
 
 class ResponseRestaurantPyd(BaseModel):
@@ -34,7 +15,7 @@ class ResponseRestaurantPyd(BaseModel):
         - name: str
     """
 
-    id: int = Field(description='ID объекта в БД')
+    id: int = Field(description='ID ресторана в БД')
     name: str = Field(description='Название ресторана')
 
 
@@ -48,10 +29,28 @@ class BaseOrderPyd(BaseModel):
         - restaurant_id: int
     """
 
-    id: int = Field(description='ID объекта в БД')
+    id: int = Field(description='ID заказа в БД')
     status: str = Field(description='Статус заказа')
     start_time: datetime = Field(description='Время создания заказа')
     restaurant_id: int = Field(description='ID ресторана, из которого сделан заказ')
+
+
+class DetailedRestaurantInfoPyd(BaseAddressPyd):
+    """Pydantic модель для создания/получения подробной информации ресторана.
+
+    Fields:
+        - name: str
+        - opening_time: time
+        - closing_time: time
+        - duration_delivery: int
+        - city: Optional[str]
+        - street: str
+        - house_number: str
+    """
+    name: str = Field(description='Название ресторана')
+    opening_time: time = Field(description='Время открытия ресторана')
+    closing_time: time = Field(description='Время закрытия ресторана')
+    duration_delivery: int = Field(description='Примерное время доставки заказа/в минутах')
 
 
 class SummaryRestaurantOrderPyd(BaseOrderPyd):
@@ -83,7 +82,7 @@ class DetailedUserInfoPyd(BaseUserDataPyd, BaseAddressPyd):
         - surname: str
     """
 
-    id: int = Field(description='ID объекта в БД')
+    id: int = Field(description='ID пользователя в БД')
 
 
 class DetailedRestaurantOrderPyd(BaseOrderPyd):
@@ -95,12 +94,12 @@ class DetailedRestaurantOrderPyd(BaseOrderPyd):
         - start_time: datetime
         - restaurant_id: int
         - end_time: Optional[datetime]
-        - courier: Optional[ResponseUserPyd]
+        - courier: Optional[UserInfoPyd]
         - user: DetailedUserInfoPyd
     """
 
     end_time: Optional[datetime] = Field(None, description='Время завершения доставки')
-    courier: Optional[ResponseUserPyd] = Field(None, description='Курьер')
+    courier: Optional[UserInfoPyd] = Field(None, description='Курьер')
     user: DetailedUserInfoPyd = Field(description='Пользователь который сделал заказ')
 
 
@@ -125,3 +124,27 @@ class ResponseUserCreateOrderPyd(BaseOrderPyd, ShippingCostPyd):
         - shipping_cost: int
     """
     pass
+
+
+class CreateCourierPyd(BaseUserDataPyd):
+    """Pydantic модель для регистрации курьера.
+
+    Fields:
+        - phone_number: str
+        - name: str
+        - surname: str
+        - status: str
+        - password: str
+    """
+
+    password: str = Field(description='Пароль курьера')
+
+
+class CourierOrdersInfoPyd(BaseModel):
+    """Pydantic модель для вывода информации о заказе для курьера."""
+
+    id: int = Field(description='ID заказа в БД')
+    status: str = Field(description='Статус заказа')
+    start_time: datetime = Field(description='Время создания заказа')
+    restaurant: DetailedRestaurantInfoPyd = Field(description='Ресторан из которого сделан заказ')
+    user: DetailedUserInfoPyd = Field(description='Пользователь который сделал заказ')
